# MediaCourier

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  StreamProcess.cpp  StreamProcess.hpp  TODO.md  Util.cpp  Util.hpp  main.cpp  mysql_template.sql  nginx-mediacourier.conf  outline.txt  socketredirect.c
MC-CSG2/: conf.tpl  config.json  instanceconfig.example.py  mcufmgmt.py  mysqldbconn.py  profile.tpl  stream.tpl
MC-CSG2/scss/: accesspass.scss  config.scss  theme.scss
MC-ChangelingShim/: CMakeLists.txt  fcgi_main.cpp  fcgi_main.h  main.cpp  nginx-changeling.conf  notes.txt
MC-StreamPlexer/: mediacourier.py
MC-TransmissionServer/: CMakeLists.txt  DBGUtils.hpp  StreamProcess.cpp  StreamProcess.hpp  Util.hpp  main.cpp
Shared/: CMakeLists.txt  HiveProtocol.proto
